[gd_scene load_steps=13 format=3 uid="uid://vndp7gpuf1ma"]

[ext_resource type="Script" path="res://scripts/projectiles/melon_bomb.gd" id="1_p40bd"]
[ext_resource type="PackedScene" uid="uid://dxgodn1vt8xpq" path="res://prefabs/particles/particle_spiky.tscn" id="2_tvuy2"]
[ext_resource type="Texture2D" uid="uid://bqn77f211ybvp" path="res://textures/weapons/melon.png" id="2_xu1vo"]
[ext_resource type="PackedScene" uid="uid://b5qjxt8gqalub" path="res://prefabs/particles/particle_generic_trail.tscn" id="3_pd5b1"]
[ext_resource type="AudioStream" uid="uid://c6fcwpjnbtwxy" path="res://audio/sfx/explosion_layer_0.mp3" id="4_30xxg"]
[ext_resource type="PackedScene" uid="uid://dyhlmh24wo8pd" path="res://prefabs/components/hurtbox.tscn" id="5_ul1s5"]
[ext_resource type="AudioStream" uid="uid://bq2op63lexd1s" path="res://audio/sfx/explosion_layer_1.mp3" id="5_ytxrk"]

[sub_resource type="Animation" id="Animation_taujg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hurtbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_81nn0"]
resource_name = "explode"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.15, 1.15), Vector2(1, 1), Vector2(1.15, 1.15), Vector2(1, 1), Vector2(1.15, 1.15), Vector2(1, 1), Vector2(1.15, 1.15), Vector2(1, 1), Vector2(1.15, 1.15), Vector2(1, 1), Vector2(1.15, 1.15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0.160784, 1), Color(1, 1, 1, 1), Color(1, 0, 0.160784, 1), Color(1, 1, 1, 1), Color(1, 0, 0.160784, 1), Color(1, 1, 1, 1), Color(1, 0, 0.160784, 1), Color(1, 1, 1, 1), Color(1, 0, 0.160784, 1), Color(1, 1, 1, 1), Color(1, 0, 0.160784, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.7, 1.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"effects_a"
}, {
"args": [],
"method": &"effects_b"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_sfx"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5kyk"]
_data = {
"RESET": SubResource("Animation_taujg"),
"explode": SubResource("Animation_81nn0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_lgfsd"]
radius = 35.2278

[sub_resource type="CircleShape2D" id="CircleShape2D_sv822"]
radius = 160.0

[node name="melon_bomb" type="Area2D"]
script = ExtResource("1_p40bd")
shell_particle = ExtResource("2_tvuy2")
juice_particle = ExtResource("3_pd5b1")
sfx_a = ExtResource("4_30xxg")
sfx_b = ExtResource("5_ytxrk")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_xu1vo")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e5kyk")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lgfsd")

[node name="hurtbox" parent="." instance=ExtResource("5_ul1s5")]
damage = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CircleShape2D_sv822")
disabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="has_parried" from="hurtbox" to="." method="_on_hurtbox_has_parried"]
